Fix: fix store card component text overflowing  its width

--- a/starter-files/public/sass/partials/_store.scss
+++ b/starter-files/public/sass/partials/_store.scss
@@ -14,9 +14,11 @@
   }
   &__details {
     padding: 2rem;
+    overflow: hidden;
     p {
       line-height: 1.2;
       margin-bottom: 0;
+      word-wrap: break-word;
     }
   }
   @media all and (max-width: 850px) {
